==> dh-linghaibin/jt-plc/code/zmms_ip/User/enc28j60.c <==
#include  "enc28j60.h"
#include  "uip.h"
#include  "bsp_spi1.h"
#define 	ENC28J60_CSL()		GPIO_ResetBits(GPIOA,GPIO_Pin_4)
#define 	ENC28J60_CSH()		GPIO_SetBits(GPIOA,GPIO_Pin_4)

void enc28j60_setbank(unsigned char address)
{
    /* 计算本次寄存器地址在存取区域的位置 */
    if((address & BANK_MASK) != enc28j60_bank)
    {
        /* 清除ECON1的BSEL1 BSEL0 详见数据手册15页 */
        enc28j60_writeop(ENC28J60_BIT_FIELD_CLR, ECON1, (ECON1_BSEL1|ECON1_BSEL0));
        /* 请注意寄存器地址的宏定义，bit6 bit5代码寄存器存储区域位置 */
        enc28j60_writeop(ENC28J60_BIT_FIELD_SET, ECON1, (address & BANK_MASK)>>5);
        /* 重新确定当前寄存器存储区域 */
        enc28j60_bank = (address & BANK_MASK);
    }
}

unsigned char enc28j60_read(unsigned char address)
{
    /* 设定寄存器地址区域 */
    enc28j60_setbank(address);
    /* 读取寄存器值 发送读寄存器命令和地址 */
    return enc28j60_readop(ENC28J60_READ_CTRL_REG, address);
}

void enc28j60_write(unsigned char address, unsigned char data)
{
    /* 设定寄存器地址区域 */
    enc28j60_setbank(address);
    /* 写寄存器值 发送写寄存器命令和地址 */
    enc28j60_writeop(ENC28J60_WRITE_CTRL_REG, address, data);
}

void enc28j60_init(unsigned char* mac_addr)
{
    GPIO_InitTypeDef GPIO_InitStructure;  
    /* 打开GPIOA时钟 */
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA | RCC_APB2Periph_GPIOC , ENABLE);
    
    /* enc28j60 CS @GPIOA.4 */
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_10MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_Init(GPIOA, &GPIO_InitStructure);
    
    
    //net RST cs
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_4;				     
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOA, &GPIO_InitStructure);	
    GPIO_SetBits(GPIOA,GPIO_Pin_0);
    GPIO_ResetBits(GPIOA,GPIO_Pin_4);//低有效
    
    // ENC28J60接收完成中断引脚，本例未使用
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5;	         	 	
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
    GPIO_Init(GPIOC, &GPIO_InitStructure);	
    
    /* 禁止ENC28J60 */
    ENC28J60_CSH();
    /* ENC28J60软件复位 该函数可以改进 */
    enc28j60_writeop(ENC28J60_SOFT_RESET, 0, ENC28J60_SOFT_RESET); 
    /* 查询ESTAT.CLKRDY位 */
    while(!(enc28j60_read(ESTAT) & ESTAT_CLKRDY));
    
    /* 设置接收缓冲区起始地址 该变量用于每次读取缓冲区时保留下一个包的首地址 */
    next_pack_ptr = RXSTART_INIT;
    
    /* 设置接收缓冲区 起始指针 */
    enc28j60_write(ERXSTL, RXSTART_INIT & 0xFF);
    enc28j60_write(ERXSTH, RXSTART_INIT >> 8);
    
    /* 设置接收缓冲区 读指针 */ 
    enc28j60_write(ERXRDPTL, RXSTART_INIT&0xFF);
    enc28j60_write(ERXRDPTH, RXSTART_INIT>>8);
    
    /* 设置接收缓冲区 结束指针 */
    enc28j60_write(ERXNDL, RXSTOP_INIT&0xFF);
    enc28j60_write(ERXNDH, RXSTOP_INIT>>8);
    
    /* 设置发送缓冲区 起始指针 */
    enc28j60_write(ETXSTL, TXSTART_INIT&0xFF);
    enc28j60_write(ETXSTH, TXSTART_INIT>>8);
    /* 设置发送缓冲区 结束指针 */
    enc28j60_write(ETXNDL, TXSTOP_INIT&0xFF);
    enc28j60_write(ETXNDH, TXSTOP_INIT>>8);
    
    /* 使能单播过滤 使能CRC校验 使能 格式匹配自动过滤*/
    enc28j60_write(ERXFCON, ERXFCON_UCEN|ERXFCON_CRCEN|ERXFCON_PMEN);
    enc28j60_write(EPMM0, 0x3f);
    enc28j60_write(EPMM1, 0x30);
    enc28j60_write(EPMCSL, 0xf9);
    enc28j60_write(EPMCSH, 0xf7);
    
    /* 使能MAC接收 允许MAC发送暂停控制帧 当接收到暂停控制帧时停止发送*/
    /* 数据手册34页 */
    enc28j60_write(MACON1, MACON1_MARXEN|MACON1_TXPAUS|MACON1_RXPAUS);
    
    /* 退出复位状态 */
    enc28j60_write(MACON2, 0x00);
    
    /* 用0填充所有短帧至60字节长 并追加一个CRC 发送CRC使能 帧长度校验使能 MAC全双工使能*/
    /* 提示 由于ENC28J60不支持802.3的自动协商机制， 所以对端的网络卡需要强制设置为全双工 */
    enc28j60_writeop(ENC28J60_BIT_FIELD_SET, MACON3, MACON3_PADCFG0|MACON3_TXCRCEN|MACON3_FRMLNEN|MACON3_FULDPX);
    
    
    /* 填入默认值 */
    enc28j60_write(MAIPGL, 0x12);
    /* 填入默认值 */
    enc28j60_write(MAIPGH, 0x0C);
    /* 填入默认值 */
    enc28j60_write(MABBIPG, 0x15);
    
    /* 最大帧长度 */
    enc28j60_write(MAMXFLL, MAX_FRAMELEN & 0xFF);	
    enc28j60_write(MAMXFLH, MAX_FRAMELEN >> 8);
    
    /* 写入MAC地址 */
    enc28j60_write(MAADR5, mac_addr[0]);	
    enc28j60_write(MAADR4, mac_addr[1]);
    enc28j60_write(MAADR3, mac_addr[2]);
    enc28j60_write(MAADR2, mac_addr[3]);
    enc28j60_write(MAADR1, mac_addr[4]);
    enc28j60_write(MAADR0, mac_addr[5]);
    
    /* 配置PHY为全双工  LEDB为拉电流 */
    enc28j60_writephy(PHCON1, PHCON1_PDPXMD);
    
    /* LED状态 */
    enc28j60_writephy(PHLCON,0x0476);	
    
    /* 半双工回环禁止 */
    enc28j60_writephy(PHCON2, PHCON2_HDLDIS);
    
    /* 返回BANK0 */	
    enc28j60_setbank(ECON1);
    
    /* 使能中断 全局中断 接收中断 接收错误中断 */
    enc28j60_writeop(ENC28J60_BIT_FIELD_SET, EIE, EIE_INTIE|EIE_PKTIE|EIE_RXERIE);
    
    /* 接收使能位 */
    enc28j60_writeop(ENC28J60_BIT_FIELD_SET, ECON1, ECON1_RXEN);
    
}
