==> dh-linghaibin/jt-plc/code/zmms/rt-thread/components/drivers/spi/enc28j60.c <==
#include "enc28j60.h"
#define NET_TRACE
#define ETH_RX_DUMP
#define ETH_TX_DUMP
#define NET_DEBUG         rt_kprintf
#define NET_DEBUG(...)
#define enc28j60_lock(dev)      rt_mutex_take(&((struct net_device*)dev)->lock, RT_WAITING_FOREVER);
#define enc28j60_unlock(dev)    rt_mutex_release(&((struct net_device*)dev)->lock);

static void enc28j60_set_bank(struct rt_spi_device * spi_device, uint8_t address)
{
    /* set the bank (if needed) .*/
    if((address & BANK_MASK) != Enc28j60Bank)
    {
        /* set the bank. */
        spi_write_op(spi_device, ENC28J60_BIT_FIELD_CLR, ECON1, (ECON1_BSEL1|ECON1_BSEL0));
        spi_write_op(spi_device, ENC28J60_BIT_FIELD_SET, ECON1, (address & BANK_MASK)>>5);
        Enc28j60Bank = (address & BANK_MASK);
    }
}

static rt_err_t enc28j60_init(rt_device_t dev)
{
    struct net_device * enc28j60 = (struct net_device *)dev;
    struct rt_spi_device * spi_device = enc28j60->spi_device;

    enc28j60_lock(dev);

    _tx_chain_init();

    // perform system reset
    spi_write_op(spi_device, ENC28J60_SOFT_RESET, 0, ENC28J60_SOFT_RESET);
    rt_thread_delay(RT_TICK_PER_SECOND/50); /* delay 20ms */

    NextPacketPtr = RXSTART_INIT;

    // Rx start
    spi_write(spi_device, ERXSTL, RXSTART_INIT&0xFF);
    spi_write(spi_device, ERXSTH, RXSTART_INIT>>8);
    // set receive pointer address
    spi_write(spi_device, ERXRDPTL, RXSTOP_INIT&0xFF);
    spi_write(spi_device, ERXRDPTH, RXSTOP_INIT>>8);
    // RX end
    spi_write(spi_device, ERXNDL, RXSTOP_INIT&0xFF);
    spi_write(spi_device, ERXNDH, RXSTOP_INIT>>8);

    // TX start
    spi_write(spi_device, ETXSTL, TXSTART_INIT&0xFF);
    spi_write(spi_device, ETXSTH, TXSTART_INIT>>8);
    // set transmission pointer address
    spi_write(spi_device, EWRPTL, TXSTART_INIT&0xFF);
    spi_write(spi_device, EWRPTH, TXSTART_INIT>>8);
    // TX end
    spi_write(spi_device, ETXNDL, TXSTOP_INIT&0xFF);
    spi_write(spi_device, ETXNDH, TXSTOP_INIT>>8);

    // do bank 1 stuff, packet filter:
    // For broadcast packets we allow only ARP packtets
    // All other packets should be unicast only for our mac (MAADR)
    //
    // The pattern to match on is therefore
    // Type     ETH.DST
    // ARP      BROADCAST
    // 06 08 -- ff ff ff ff ff ff -> ip checksum for theses bytes=f7f9
    // in binary these poitions are:11 0000 0011 1111
    // This is hex 303F->EPMM0=0x3f,EPMM1=0x30
    spi_write(spi_device, ERXFCON, ERXFCON_UCEN|ERXFCON_CRCEN|ERXFCON_BCEN);

    // do bank 2 stuff
    // enable MAC receive
    spi_write(spi_device, MACON1, MACON1_MARXEN|MACON1_TXPAUS|MACON1_RXPAUS);
    // enable automatic padding to 60bytes and CRC operations
    // spi_write_op(ENC28J60_BIT_FIELD_SET, MACON3, MACON3_PADCFG0|MACON3_TXCRCEN|MACON3_FRMLNEN);
    spi_write_op(spi_device, ENC28J60_BIT_FIELD_SET, MACON3, MACON3_PADCFG0 | MACON3_TXCRCEN | MACON3_FRMLNEN | MACON3_FULDPX);
    // bring MAC out of reset

    // set inter-frame gap (back-to-back)
    // spi_write(MABBIPG, 0x12);
    spi_write(spi_device, MABBIPG, 0x15);

    spi_write(spi_device, MACON4, MACON4_DEFER);
    spi_write(spi_device, MACLCON2, 63);

    // set inter-frame gap (non-back-to-back)
    spi_write(spi_device, MAIPGL, 0x12);
    spi_write(spi_device, MAIPGH, 0x0C);

    // Set the maximum packet size which the controller will accept
    // Do not send packets longer than MAX_FRAMELEN:
    spi_write(spi_device, MAMXFLL, MAX_FRAMELEN&0xFF);
    spi_write(spi_device, MAMXFLH, MAX_FRAMELEN>>8);

    // do bank 3 stuff
    // write MAC address
    // NOTE: MAC address in ENC28J60 is byte-backward
    spi_write(spi_device, MAADR0, enc28j60->dev_addr[5]);
    spi_write(spi_device, MAADR1, enc28j60->dev_addr[4]);
    spi_write(spi_device, MAADR2, enc28j60->dev_addr[3]);
    spi_write(spi_device, MAADR3, enc28j60->dev_addr[2]);
    spi_write(spi_device, MAADR4, enc28j60->dev_addr[1]);
    spi_write(spi_device, MAADR5, enc28j60->dev_addr[0]);

    /* output off */
    spi_write(spi_device, ECOCON, 0x00);

    // enc28j60_phy_write(PHCON1, 0x00);
    enc28j60_phy_write(spi_device, PHCON1, PHCON1_PDPXMD); // full duplex
    // no loopback of transmitted frames
    enc28j60_phy_write(spi_device, PHCON2, PHCON2_HDLDIS);

    enc28j60_set_bank(spi_device, ECON2);
    spi_write_op(spi_device, ENC28J60_BIT_FIELD_SET, ECON2, ECON2_AUTOINC);

    // switch to bank 0
    enc28j60_set_bank(spi_device, ECON1);
    // enable all interrutps
    spi_write_op(spi_device, ENC28J60_BIT_FIELD_SET, EIE, 0xFF);
    // enable packet reception
    spi_write_op(spi_device, ENC28J60_BIT_FIELD_SET, ECON1, ECON1_RXEN);

    /* clock out */
    enc28j60_clkout(spi_device, 2);

    enc28j60_phy_write(spi_device, PHLCON, 0xD76);	//0x476
    rt_thread_delay(RT_TICK_PER_SECOND/50); /* delay 20ms */

    enc28j60_unlock(dev);
    return RT_EOK;
}

static rt_size_t enc28j60_read(rt_device_t dev, rt_off_t pos, void* buffer, rt_size_t size)
{
    rt_set_errno(-RT_ENOSYS);
    return RT_EOK;
}

static rt_size_t enc28j60_write(rt_device_t dev, rt_off_t pos, const void* buffer, rt_size_t size)
{
    rt_set_errno(-RT_ENOSYS);
    return 0;
}
